--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">&lt;/HTML&gt;</span>
           <img 
-          class="card__image image__card--grayscale"
-          src="./images/image (4).png" 
+          class="card__image image__card-grayscale"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -150,8 +150,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">&lt;CSS&gt;</span>
           <img 
-          class="card__image image__card--saturate"
-          src="./images/image (5).png" 
+          class="card__image image__card-saturate"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -211,8 +211,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">&lt;desigions&gt;</span>
           <img 
-          class="card__image image__card--contrast-hue"
-          src="./images/image (6).png" 
+          class="card__image image__card-contrast-hue"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -275,8 +275,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">care</span>
           <img 
-          class="card__image image__card--invert"
-          src="./images/image (7).png" 
+          class="card__image image__card-invert"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -342,8 +342,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">&lt;support&gt;</span>
           <img 
-          class="card__image image__card--sepia"
-          src="./images/image (8).png" 
+          class="card__image image__card-sepia"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -406,8 +406,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">&lt;lifes-style: none;&gt;</span>
           <img 
-          class="card__image image__card--blur"
-          src="./images/image (9).png" 
+          class="card__image image__card-blur"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -472,8 +472,8 @@
         <div class="card__image-wrapper">
           <span class="card__image-decor">&lt;experience&gt;</span>
           <img 
-          class="card__image image__card--hue-rotate-blur"
-          src="./images/image (10).png" 
+          class="card__image image__card-hue-rotate-blur"
+          src="./images/image (1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
