--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
               начать? а вдруг будет слишком сложно? что, если я не справлюсь?
             </p>
             <p class="card__text">
-              Место для ваших воспоминаний о начале первого спринта.
+              Помню, как долго я пытался что-то сделать сам, но в итоге все было как-то не то, я чувствовал что
+              я ничего не понимаю. Друзья и знакомые много времени отговаривали меня от платных курсов, и когда я решил 
+              попробовать себя в этой сфере, я был в отчаянии, от того что ничего не добьюсь, в этой сфере, если не рескну
+              и не попробую. И когда я наконец приступил к обучению, я не сколько не разочаровался:D
             </p>
           </div>
           <div class="card__button-wrapper">
@@ -160,7 +163,12 @@
               Первый проект — позади! Но это всё ещё самое начало пути. Радость
               могла быстро померкнуть и смениться ожиданием провала. Или вы,
               наоборот, могли вдохновиться успехами и поверить в себя.</p>
-            <p class="card__text">Место для ваших воспоминаний об окончании первого спринта.</p>
+            <p class="card__text">Это было сложно, и по началу даже страшно,
+               я боялся вылететь на первом круге, но в итоге я смог закрыть 
+               первый спринт. Когда я получил зачет,я почувствовал временное
+                облегчение, но это было лишь временное,так как я понимал в 
+                переди ещё не мало, трудных задач. Но отступать
+              мне было некуда, я должен добиться успеха, и я смогу.</p>
           </div>
           <div class="card__button-wrapper">
             <button class="button__icon card__icon-button" type="button" aria-hidden="true">
@@ -223,7 +231,15 @@
               за идеалом и понять, что он недостижим. А, может, вы вовсе и не
               подвержены перфекционизму и вместо того, чтобы сделать идеально,
               старались просто сделать.</p>
-            <p class="card__text">Место для ваших воспоминаний о начале второго спринта.
+            <p class="card__text">Я только закончил проект первого спринта,
+              как тут же надо было приступать ко второму. Первое что я увидел,в
+               Пачке это ребята которые уже обсуждали второй проект, я был в шоке,
+               я только что закончил первую, в своей жизне, реальную задачу по вёрстке,
+               которая далась мне мягко говоря не просто, я потратил все 4 итерации,
+               а люди уже начали второй. Я почувствовал себя храмой лошадью которая всегда
+               скачет в конце, но в итоге я сказал себе, что у всех людей свой темп работы, 
+               и я просто занялся своими делами. А когда был готов приступить к проекту, я
+              закончил его за два дня, практически без помощи.
             </p>
           </div>
           <div class="card__button-wrapper">
@@ -290,7 +306,9 @@
               единомышленники, не правда ли?
             </p>
             <p class="card__text">
-              Место для ваших воспоминаний об окончании второго спринта.
+              Я закончил второй проект, я чувствовал, что я  всётаки могу стать веб-разработчиком.
+              Но я опять закончил в притык, и я был вымотан, работой, учёбой, и прочими проблемами, 
+              которые могут повлиять на вашу жизнь.
             </p>
           </div>
           <div class="card__button-wrapper">
@@ -354,7 +372,9 @@
               время посмотреть на задачу под другим углом.
             </p>
             <p class="card__text">
-            Место для ваших воспоминаний о начале третьего спринта.
+            Я неспешно приступил к работе над новой темой, и это мне аукнулось в конце третьего
+              спринта. Каждое задание давалось мне тяжело, каждая тема была слишком объёмной. я думал что не смоу ее освоить.
+             С каждым разом мне было всё тяжелее. Я стал чаще злиться, и мне приходилось себя пересиливать каждый раз, садясь за учёбу.
             </p>
           </div>
           <div class="card__button-wrapper">
@@ -420,7 +440,10 @@
               откуда вы её черпали.
             </p>
             <p class="card__text">
-              Место для ваших воспоминаний об окончании третьего спринта.
+              Руки у меня и впрямь опустились. Случилдось то чего я не ожидал, хотя понимал что такое может слкчиться.
+              Я выгорел, три неудачные попытки сдать проект, да ещё и пропущенный дедлайн. Мне пришлось перейти в другую когорту, 
+              и потребовалась неделя чтобы востановить силы. Благо в переходе был плюс в том, что мне не надо было проходить всю тему вместе с остальными
+              ребятами, я приступил к исправлению ошибок. И этот проект я тоже сдал!
             </p>
           </div>
           <div class="card__button-wrapper">
@@ -487,7 +510,8 @@
               Ведь часто путь — и есть результат.
             </p>
             <p class="card__text">
-            Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+            Я сверстал последний проект в этом блоке. я долгое время ждал этого дня, и я уже очень хочу приступить к JavaScript, тратить ещё месяц 
+            на вёрстку было бы обидно, после всего того пути что я прошёл, я бы не хотел терять возможность освоить профессию, и заняться уже наконец чем то интересным мне.
             </p>
           </div>
           <div class="card__button-wrapper">
