--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
               Это было самое начало пути. На этом этапе важно было проникнуться
               основами и настроиться на учёбу. И, возможно, подумать, как новые
               знания могут повлиять на ваше будущее. </p>
-            <p class="card__text">Место для ваших воспоминаний о начале обучения.</p>
+            <p class="card__text">Это юыло перед моим днем рождения, я чувствовал себя подавленным
+               потому что чувствовал что занимаюсь не своим делом. Да ещё и тем что мне абсолютно не нравится, 
+              я пару раз увидел рекламу практикума, и что то в нутри меня сказало, что либо сейчас либо никогда!</p>
           </div>
           <div class="card__button-wrapper">
             <button class="button__icon card__icon-button" type="button" aria-hidden="true">
