прогнал через валидатор, исправил критичные замечания

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Закрывающий тег</title>
-    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/animations.css" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" >
+    <link rel="apple-touch-icon" href="./images/favicon.png" >
+    <link rel="stylesheet" href="./fonts/fonts.css" >
+    <link rel="stylesheet" href="./styles/variables.css" >
+    <link rel="stylesheet" href="./styles/globals.css" >
+    <link rel="stylesheet" href="./styles/style.css" >
+    <link rel="stylesheet" href="./styles/animations.css" >
   </head>
   <body class="page">
     <header class="header">
@@ -24,7 +24,7 @@
           <span class="card__image-decor">&lt;/HTML&gt;</span>
           <img 
           class="card__image"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -46,7 +46,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -87,7 +87,7 @@
           <span class="card__image-decor">&lt;/HTML&gt;</span>
           <img 
           class="card__image image__card-grayscale"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -115,7 +115,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -156,7 +156,7 @@
           <span class="card__image-decor">&lt;CSS&gt;</span>
           <img 
           class="card__image image__card-saturate"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -181,7 +181,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -222,7 +222,7 @@
           <span class="card__image-decor">&lt;desigions&gt;</span>
           <img 
           class="card__image image__card-contrast-hue"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -253,7 +253,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -294,7 +294,7 @@
           <span class="card__image-decor">care</span>
           <img 
           class="card__image image__card-invert"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -322,7 +322,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -363,7 +363,7 @@
           <span class="card__image-decor">&lt;support&gt;</span>
           <img 
           class="card__image image__card-sepia"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -388,7 +388,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -429,7 +429,7 @@
           <span class="card__image-decor">&lt;lifes-style: none;&gt;</span>
           <img 
           class="card__image image__card-blur"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -457,7 +457,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
@@ -498,7 +498,7 @@
           <span class="card__image-decor">&lt;experience&gt;</span>
           <img 
           class="card__image image__card-hue-rotate-blur"
-          src="./images/image (1).png" 
+          src="./images/image(1).png" 
           alt="Дом на колёсах в ночном лесу">
         </div>
         <div class="card__content-wrapper">
@@ -525,7 +525,7 @@
               xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
-              file="#000"
+              fill="#000"
               d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 
                 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 
                 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 
